# reservoir_computing

./: .gitignore  ABOUT.md  LICENSE  README.md  data_utils.py  demo_agent_intergrate.ipynb  esn_reservoir.ipynb  esn_reservoir.py  logger.py  lsm_reservoir.ipynb  lsm_reservoir.py  mcp_adapter.py  physical_reservoir.ipynb  physical_reservoir.py  pyproject.toml  ticker.py
